<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:padding="24dp">

    <TextView
        android:id="@+id/dialogName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addAccount"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/accountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_name"
            android:textColor="@color/blue"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp">
        <AutoCompleteTextView
            android:id="@+id/accountCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/currency"
            android:inputType="none"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/accountBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/initial_balance"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Créer mon compte"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"/>


</LinearLayout>
