...
                android:textStyle="bold"
                android:fontFamily="@font/alata"/>
        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_edit"
            app:tint="@color/white" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/deleteAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_delete"
            app:tint="@color/white" />
...
