...
                        android:layout_height="wrap_content"
                        android:hint="@string/user_lastname"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/updateUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.FloatingActionButton"
                    android:text="@string/user_update"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/blue"/>
...
